# Rust-Hydrus

./: .genemichaels.json  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
Plugins/FileHash/: Cargo.toml
Plugins/FileHash/src/: lib.rs
Plugins/FileInfo/: Cargo.toml
Plugins/FileInfo/src/: lib.rs
Plugins/File_Thumbnail/: Cargo.toml
Plugins/File_Thumbnail/src/: lib.rs
Plugins/SleepyDev/src/: lib.rs
Plugins/directdownload/: Cargo.toml
Plugins/directdownload/src/: lib.rs
Plugins/file_hash/: Cargo.toml
Plugins/file_hash/src/: lib.rs
Plugins/file_info/: Cargo.toml
Plugins/file_info/src/: lib.rs
Plugins/file_thumbnail/: Cargo.toml
Plugins/file_thumbnail/src/: lib.rs
Plugins/pluginblurhash/: Cargo.toml
Plugins/pluginblurhash/src/: lib.rs
Plugins/rusthydrus_blurhash/: Cargo.toml
Plugins/rusthydrus_blurhash/src/: lib.rs
Plugins/template/: Cargo.toml
Plugins/webapi/: Cargo.toml
Plugins/webapi/src/: app.rs  fallback.rs  lib.rs
benches/: inmemdb.rs
generators/local_api/: Cargo.toml
generators/local_api/src/: lib.rs
generators/packager/src/: main.rs
generators/web_api/: Cargo.toml
generators/web_api/src/: lib.rs
libs/sharedtypes/: Cargo.toml
libs/sharedtypes/src/: lib.rs
plugins/: Cargo.toml
plugins/File_Thumbnail/: Cargo.toml
plugins/File_Thumbnail/src/: lib.rs
plugins/File_Thumbnail/thumbnailer/: Cargo.toml
plugins/File_Thumbnail/thumbnailer/src/: lib.rs
plugins/SleepyDev/: Cargo.toml
plugins/SleepyDev/src/: lib.rs
plugins/catbox_scraper/: Cargo.toml
plugins/catbox_scraper/src/: lib.rs
plugins/directdownload/: Cargo.toml
plugins/directdownload/src/: lib.rs
plugins/file_hash/: Cargo.toml
plugins/file_hash/src/: lib.rs
plugins/file_info/src/: lib.rs
plugins/file_thumbnail/: Cargo.toml
plugins/file_thumbnail/src/: lib.rs
plugins/file_thumbnail/thumbnailer/src/: lib.rs
plugins/file_thumbnail/thumbnailer/src/utils/: ffmpeg_cli.rs
plugins/rusthydrus_blurhash/: Cargo.toml
plugins/rusthydrus_blurhash/src/: lib.rs
plugins/tag-cache/: Cargo.toml
plugins/tag-cache/src/: lib.rs
plugins/template/src/: lib.rs
scrapers/bsky/: Cargo.toml
scrapers/bsky/src/: lib.rs
scrapers/bunkr/: Cargo.toml
scrapers/bunkr/src/: lib.rs
scrapers/catbox_scraper/: Cargo.toml
scrapers/chanscraper/: Cargo.toml
scrapers/chanscraper/src/: boards.rs  lib.rs
scrapers/chanscraper/src/boards/: eightchan.rs  fourchan.rs  lulz.rs
scrapers/civitai/: Cargo.toml
scrapers/civitai/src/: lib.rs
scrapers/createp/: Cargo.toml
scrapers/createp/src/: lib.rs
scrapers/danbooru/: Cargo.toml
scrapers/danbooru/src/: lib.rs
scrapers/directdownload/: Cargo.toml
scrapers/directdownload/src/: lib.rs
scrapers/e6/: Cargo.toml
scrapers/e6/src/: lib.rs
scrapers/e6aiscraper/: Cargo.toml
scrapers/e6aiscraper/src/: lib.rs
scrapers/e6scraper/: Cargo.toml
scrapers/e6scraper/src/: lib.rs
scrapers/fourchan/: Cargo.toml
scrapers/fourchan/src/: boards.rs  lib.rs
scrapers/fourchan/src/boards/: fourchan.rs
scrapers/furry34/: Cargo.toml
scrapers/furry34/src/: lib.rs
scrapers/fxembed/: Cargo.toml
scrapers/fxembed/src/: lib.rs
scrapers/google-drive/: Cargo.toml
scrapers/kemono/: Cargo.toml
scrapers/kemono/src/: lib.rs
scrapers/mangadex/: Cargo.toml
scrapers/mangadex/src/: lib.rs
scrapers/mega/: Cargo.toml
scrapers/mega/reqwest-proxy-pool/: .cargo_vcs_info.json  Cargo.toml
scrapers/mega/reqwest-proxy-pool/src/: pool.rs  utils.rs
scrapers/mega/src/: lib.rs
scrapers/rule34/: Cargo.toml
scrapers/rule34/src/: lib.rs
scrapers/ychan/: Cargo.toml
scrapers/ychan/src/: lib.rs
scrapers_broken/bsky/: Cargo.toml
scrapers_broken/bsky/src/: lib.rs
scrapers_broken/bunkr/: Cargo.toml
scrapers_broken/bunkr/src/: lib.rs
scrapers_broken/catbox_scraper/: Cargo.toml
scrapers_broken/catbox_scraper/src/: lib.rs
scrapers_broken/civitai/: Cargo.toml
scrapers_broken/civitai/src/: lib.rs
scrapers_broken/createp/: Cargo.toml
scrapers_broken/createp/src/: lib.rs
scrapers_broken/danbooru/: Cargo.toml
scrapers_broken/danbooru/src/: lib.rs
scrapers_broken/furry34/: Cargo.toml
scrapers_broken/furry34/src/: lib.rs
scrapers_broken/fxembed/: Cargo.toml
scrapers_broken/fxembed/src/: lib.rs
scrapers_broken/kemono/: Cargo.toml
scrapers_broken/kemono/src/: lib.rs
scrapers_broken/mega/: Cargo.toml
scrapers_broken/mega/reqwest-proxy-pool/src/: config.rs  pool.rs
scrapers_broken/rule34/: Cargo.toml
scrapers_broken/rule34/src/: lib.rs
scrapers_broken/ychan/: Cargo.toml
scrapers_broken/ychan/src/: lib.rs
src/: build.rs  bypasses.rs  cli.rs  client.rs  download.rs  downloadlogic.rs  file.rs  globalload.rs  helpers.rs  jobs.rs  logging.rs  main.rs  os.rs  plugins.rs  scraper.rs  server.rs  sharedtypes.rs  tasks.rs  threading.rs  time_func.rs  types.rs
src/cli/: cli_structs.rs
src/database/: database.rs  dbtraits.rs  enclave.rs  fuzzy_search.rs  inmemdbnew.rs  mod.rs  public_calls.rs  roaring_bitmap.rs  sqlitedb.rs  tagfunctions.rs  updatehandler.rs
src/scr/: bypasses.rs  cli.rs  cli_structs.rs  database.rs  download.rs  fakeMark.json  file.rs  globalload.rs  jobs.rs  jobs1.rs  logging.rs  os.rs  plugins.rs  scraper.rs  sharedtypes.rs  tasks.rs  threading.rs  time.rs  time_func.rs
src/scr/db/: database.rs  dbtraits.rs  enclave.rs  fuzzy_search.rs  helpers.rs  inmemdbnew.rs  mod.rs  sqlitedb.rs  updatehandler.rs
src/scr/db/inmemdbnew/: inmemdbnew.rs  mod.rs
src/scr/intcoms/: client.rs  server.rs  types.rs
src/ui/: components.rs  ui.rs
