[package]
name = "rusthydrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["cookies", "gzip", "brotli", "default-tls", "deflate", "default", "zstd", "blocking"] }
url = "2.3.1"
ratelimit = "0.10.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
rusqlite = {version = "0.32.1", features=["modern_sqlite", "bundled", "column_decltype"] }
fast_log = "1.7.6"
bytes = { default-features = false, version = "1.4.0" }
sha2 = { default-features = false, version = "0.10.6" }
futures = { features = ["executor"], default-features = false, version = "0.3.24" }
log = {version="0.4.2" }
strum_macros = "0.26.2"
strum = { default-features = false, version = "0.26.2" }
csv = "1.2.2"
file-format = { version = "0.26.0", features = ["reader"] }
serde = {version = "1.0.171", features = ["derive"], default-features = false }
md5 = { default-features = false, version = "0.7.0" }
sha1 = { default-features = false, features=["std"],version = "0.10.5" }
chrono = { features = [], version = "0.4.26" }
os_pipe = "1.1.4"
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.5.19", features = ["derive", "color", "cargo"] }
walkdir = "2.4.0"
rayon = "1.8.0"
jwalk = "0.8.1"
interprocess = { version = "2.1.0", features = ["tokio"] }
fnv = "1.0.7"
serde_json = "1.0.122"
rusty_pool = "0.7.0"
strfmt = "0.2.4"
eta = "0.2.2"
ahash = "0.8.11"
libloading = "0.8.5"
thread-control = "0.1.2"
regex = "1.11.1"

[profile.release]
opt-level = 3
lto=true
codegenunits=1
#strip = true
panic = "abort"
debug = false

[build-dependencies]
walkdir = "2.4.0"


[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
