[package]
name = "rusthydrus"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.22", features = ["cookies", "gzip", "brotli", "native-tls", "deflate", "default", "zstd", "blocking"] }
url = "2.3.1"
ratelimit = "0.10.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
rusqlite = { version = "^0.37.0", features = ["modern_sqlite", "bundled", "column_decltype", "unlock_notify", "trace", "load_extension"] }
fast_log = {version="1.7.6", features=["lz4"]}
bytes = { default-features = false, version = "1.4.0" }
sha2 = { version = "0.10.6"}
futures = { features = ["executor"], default-features = false, version = "0.3.31" }
log = {version="0.4.2" }
strum_macros = "0.27.1"
strum = { default-features = false, version = "0.27.1" }
csv = "1.2.2"
file-format = { version = "0.28.0", features = ["reader"] }
serde = {version = "1.0.171", features = ["derive"], default-features = false }
md5 = { default-features = false, version = "0.8.0" }
sha1 = { default-features = false, features=["std"],version = "0.10.5" }
chrono = { features = [], version = "0.4.26" }
os_pipe = "1.1.4"
anyhow = "1.0.75"
bincode = { version = "2.0.1", features = ["serde","alloc"] }
clap = { version = "4.5.19", features = ["derive", "color", "cargo"] }
walkdir = "2.4.0"
rayon = "1.8.0"
jwalk = "0.8.1"
interprocess = { version = "2.1.0", features = ["tokio"] }
fnv = "1.0.7"
serde_json = "1.0.122"
rusty_pool = "0.7.0"
strfmt = "0.2.4"
eta = "0.2.2"
ahash = "0.8.11"
libloading = "0.8.5"
thread-control = "0.1.2"
regex = {version="1.11.1", features=["std"]}
tracing-mutex = "0.3.1"
zip = {version="6.0.0", features = ["chrono"]}
reqwest-websocket = "0.5.0"
remove_empty_subdirs = "0.1.1"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.31.0", features = ["bundled"] }
lazy_static = "1.5.0"
ipc-channel-mux = "0.0.1"
crossbeam-channel = "0.5.15"
parking_lot = {version="0.12.5", features=["deadlock_detection"]}
tokio = {version="1.48.0", features=["rt-multi-thread", "macros"]}
uuid = "1.18.1"
fuzz-search = "0.1.0"

[features]
default = ["exe_build"]
exe_build = ["regex", "clap"]
# Enables sending and recieving regex
regex = []
clap = []

[profile.release]
opt-level = 3
lto=true
codegenunits=1
strip = true
panic = "abort"
debug = false

[build-dependencies]
walkdir = "2.4.0"


[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[dev-dependencies]

[[bench]]
name = "inmemdb"
harness = false

