[package]
name = "FileInfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
os_pipe = "1.1.4"

serde = { version = "1.0.192", features = ["derive"] }
strum_macros = "0.25.1"

libc = { version = "0.2", default-features = false }
fast_log = "1.6.12"
log = "0.4.20"
anyhow = "1.0.79"
bincode = "1.3.3"
interprocess = "1.2.1"
[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = false
debug = true
panic = "abort"
