[package]
name = "File_Thumbnail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.1"
pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
thumbnailer = {git= "https://github.com/git4unrealnondev/thumbnailer"} 
bincode = "1.3.3"
serde_bytes = "0.11.14"
interprocess = "1.2.1"
anyhow = "1.0.83"
[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"
