[package]
name = "rusthydrus_blurhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
strum = "0.25.0"
strum_macros = "0.25.1"
image = "0.24.6"
pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
blurhash = { version = "0.2.0", features = ["image", "gdk-pixbuf"] }
anyhow = "1.0.86"
bincode = { version = "2.0.1", features = ["serde","alloc"] }
interprocess = "2.1.0"
serde_bytes = "0.11.14"
rayon = "1.10.0"
clap = { version = "4.5.17", features = ["derive"] }

[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"
