[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["qr_code"] }
nohash-hasher = "0.2.0"
pipe = { version = "0.4.0", features = ["bidirectional"] }
read_write = "0.1.2"
strum = "0.25.0"
strum_macros = "0.25.1"

[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"
