[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
futures = "0.3.28"
leptos = { version = "0.5.1", features = ["csr"] }
nohash-hasher = "0.2.0"
pipe = { version = "0.4.0", features = ["bidirectional"] }
read_write = "0.1.2"
strum = "0.25.0"
strum_macros = "0.25.1"
tokio = {version="1.32.0", features=["full"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
tower = "0.4.13"
hyper = { version = "0.14.27", features = ["full"] }
leptos_axum = { version = "0.5.1", features = ["wasm"] }
os_pipe = "1.1.4"
interprocess = "1.2.1"


[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"
