[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
futures = "0.3.28"
leptos = { version = "0.5.1", features = ["csr"] }
leptos_axum = { version = "0.5.2", default-features = false, features = ["wasm"] }
nohash-hasher = "0.2.0"
pipe = { version = "0.4.0", features = ["bidirectional"] }
read_write = "0.1.2"
strum = "0.25.0"
strum_macros = "0.25.1"
tokio = {version="1.32.0", features=["full"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
tower = "0.4.13"
hyper = { version = "0.14.27", features = ["full"] }
os_pipe = "1.1.4"
interprocess = "1.2.1"
serde = "1.0.190"
cfg-if = "1.0.0"
leptos_meta = "0.5.2"
leptos_router = "0.5.2"


[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "{{project-name}}"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

bin-features = ["ssr"]

lib-profile-release = "wasm-release"
