[package]
name = "File_Thumbnail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.1"
pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
thumbnailer = {path= "thumbnailer"} 
bincode = { version = "2.0.1", features = ["serde","alloc"] }
serde_bytes = "0.11.14"
interprocess = "2.1.0"
anyhow = "1.0.83"
sha2 = { version = "0.10.8", features = ["asm"] }
rayon = "1.10.0"
file-format = "0.25.0"
image = { version = "^0.25.9", default-features = true, features = ["jpeg", "png", "gif"] }
webp-animation = { version = "0.9.0", features = ["image", "static"] }
clap = { version = "4.5.17", features = ["derive"] }
[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"
