[package]
name = "File_Thumbnail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
thumbnailer = {path= "thumbnailer"} 
bincode = { version = "2.0.1", features = ["serde","alloc"] }
serde_bytes = "0.11.19"
interprocess = "2.3.1"
anyhow = "1.0.101"
sha2 = { version = "0.10.9", features = ["asm"] }
rayon = "1.11.0"
file-format = "0.25.0"
image = { version = "^0.25.9", default-features = true, features = ["jpeg", "png", "gif"] }
webp-animation = { version = "0.9.0", features = ["image", "static"] }
ureq = { version = "3.2.0", features = ["json"] }
gif = "0.14.1"
[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"

[features]
default = ["serde"]
serde = []
