[package]
name = "SleepyDev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
clap = { version = "4.5.17", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde","alloc"] }

[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"
