[package]
name = "SleepyDev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
clap = { version = "4.5.17", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }

[lib]
crate-type = ["dylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
panic = "abort"

[features]
default = ["serde"]
serde = []
