[package]
name = "directdownload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "directdownload"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde","alloc"] }
serde = { version = "1.0.192", features = ["derive"] }

[profile.release-with-debug]
inherits = "release"
debug = true
