[package]
name = "directdownload"
version = "0.1.0"
edition = "2021"

[lib]
doc=true
name = "directdownload"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.192", features = ["serde_derive"] }
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }
sharedtypes = { workspace = true }


[features]
default = ["serde"]
serde = []
clap=[]


