[package]
name = "rusthydrus_blurhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
strum = "0.25.0"
strum_macros = "0.25.1"
image = "0.24.6"
pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
blurhash = { version = "0.2.0", features = ["image", "gdk-pixbuf"] }
anyhow = "1.0.86"
interprocess = "2.1.0"
serde_bytes = "0.11.14"
rayon = "1.10.0"
clap = { version = "4.5.17", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }
sharedtypes = { workspace = true }

[features]
default = ["serde"]
serde = []
clap=[]


[lib]
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]


