[package]
name = "bunkr"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "bunkr"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde","alloc"] }
interprocess = "2.2.3"
scraper = "0.24.0"
url = "2.5.7"
regex = "1.12.2"
ureq = {version="3.1.4", features=["json"]}
base64 = "0.22.1"
anyhow = "1.0.100"
rand = "0.9.2"
chrono = "0.4.42"
