[package]
name = "createporn"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "createp"
path = "src/lib.rs"
crate-type = ["dylib"]


[dependencies]
json = "0.12.4"
bincode = { version = "2.0.1", features = ["serde","alloc"] }
chrono = "0.4.31"
url = "2.5.8"
scraper = "0.25.0"
unescape = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }

[features]
clap= []
serde=[]
default = ["serde"]
