[package]
name = "e6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false
panic = "abort"

[lib]
doc=true
name = "e6"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
interprocess = "2.2.1"
json = "0.12.4"
serde = { version = "1.0.192", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }
sharedtypes = { workspace = true }

[features]
default = ["serde"]
serde = []
clap=[]

