[package]
name = "e6scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = 3
#lto=true
#codegenunits=1
#strip = true

[lib]
doc=true
name = "e6scraper"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
json = "0.12.4"
ahash = "0.7.6"
strum = "0.24.1"
strum_macros = "0.24.3"
nohash-hasher = "0.2.0"
