[package]
name = "fourchan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "fourchan"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
chrono = "0.4.31"
json = "0.12.4"
serde = { version = "1.0.192", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.1"
