[package]
name = "furry34"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "furry34"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.86"
bincode = { version = "2.0.1", features = ["serde","alloc"] }
chrono = "0.4.31"
interprocess = "2.2.1"
json = "0.12.4"
scraper = "0.25.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.15"
smart-default = "0.7.1"
url = "2.5.8"

[features]
default = ["serde"]
serde = []
clap=[]

