[package]
name = "fxembed"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "fxembed"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde","alloc"] }
interprocess = "2.2.3"
scraper = "0.24.0"
