[package]
name = "kemono"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "kemono"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
hex = "0.4.3"
json = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.1"
bincode = { version = "2.0.1", features = ["serde","alloc"] }
regex = "1.11.1"
