[package]
name = "kemono"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "kemono"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
json = "0.12.4"
serde = { version = "1.0.192", features = ["derive"] }
regex = "1.11.1"
chrono = "0.4.41"
interprocess = "2.2.3"
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }

[features]
clap= []
serde=[]
default = ["serde"]
