[package]
name = "mangadex"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "mangadex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde","alloc"] }
interprocess = "2.2.3"
scraper = "0.24.0"
url = "2.5.7"
features = "0.10.0"
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["json"] }

[features]
default = ["serde"]
serde = []
clap=[]

