[package]
name = "mega_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
#base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde","alloc"] }
#chrono = "0.4.31"
#clap = { version = "4.5.17", features = ["derive"] }
#hex = "0.4.3"
interprocess = "2.2.1"
mega = "0.8.0"
#json = "0.12.4"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["socks"] }
scraper = "0.23.1"
serde = { version = "1.0.192", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
rayon = "1.11.0"
#serde_bytes = "0.11.15"
#serde_json = "1.0.132"
#strum = "0.25.0"
#strum_macros = "0.25.1"

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = ["exe_build"]
exe_build = []
# Enables sending and recieving regex
regex = []

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "mega_scraper"
path = "src/lib.rs"
crate-type = ["dylib"]

