[package]
name = "mega_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde","alloc"] }
interprocess = "2.2.1"
mega = "0.8.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["socks"] }
serde = { version = "1.0.192", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
rayon = "1.11.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = ["exe_build"]
exe_build = []
# Enables sending and recieving regex
regex = []

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "mega_scraper"
path = "src/lib.rs"
crate-type = ["dylib"]

