[package]
name = "mega_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = "2.2.1"
mega = {path="./mega-rs"}
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["socks"] }
serde = { version = "1.0.192", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
rayon = "1.11.0"
reqwest-proxy-pool = {path = "./reqwest-proxy-pool"}
reqwest-middleware = "0.4.2"
chrono = "0.4.42"
sysinfo = "0.37.2"
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
clap= []
serde=[]
default = ["serde"]
[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "mega_scraper"
path = "src/lib.rs"
crate-type = ["dylib"]

