[package]
name = "ychan"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true
debug=false

[lib]
doc=true
name = "ychan"
path = "src/lib.rs"
crate-type = ["dylib"]


[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde","alloc"] }
scraper = "0.24.0"
url = "2.5.7"
chrono = "0.4.42"

