[package]
name = "catbox_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doc=true
name = "catbox_scraper"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
interprocess = "2.2.1"
regex = "1.11.1"
scraper = "0.23.1"
serde = { version = "1.0.192", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["arrayvec", "derive", "serde"] }
redact = { git = "https://github.com/git4unrealnondev/redact",  features = ["serde", "bitcode"] }
sharedtypes = { workspace = true }



[features]
default = ["exe_build", "serde"]
exe_build = ["regex"]
# Enables sending and recieving regex
regex = []
serde = []

