[package]
name = "thumbnailer"
readme = "README.md"
license = "Apache-2.0"
authors = ["trivernis <trivernis@protonmail.com>"]
description = "An image thumbnail creation library"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/Trivernis/thumbnailer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = "^0.3.1"
rayon = "^1.11.0"
tempfile = "^3.25.0"
image = { version = "^0.25.9", default-features = false, features=["jpeg", "png", "gif"]}
lazy_static = "^1.5.0"
file-format = { version = "^0.25.0", features = ["reader"] }

[features]
default = ["webp"]
webp = ["image/webp"]
